--- a/index.html
+++ b/index.html
@@ -19,14 +19,19 @@
           </h2>
 
           <article class = 'prof-sum grid-col-span2'>
-            <p>Motivated and adaptable professional with a strong foundation in software and web development. Eager to leverage a solid educational background and passion for coding to contribute effectively to dynamic development projects. Committed to continuous learning and growth. Seeking an entry-level role to apply and expand technical skills while making a positive impact on cutting-edge projects</p>
-            <p>Additionally, I am open to freelance opportunities where I can apply my skills to diverse projects and broaden my practical experience. Contact me is interested in contracting me for a project!</p>
+            <p>As a highly motivated and adaptable professional with a robust foundation in software and web development, I am poised to bring my solid educational background and fervent passion for coding to your dynamic development projects. With a strong commitment to continuous learning and professional growth, I aim to leverage my comprehensive skill set to contribute effectively and make a significant impact on innovative projects.</p>
+            <p>My expertise spans a broad range of technologies, including HTML5, CSS3, JavaScript, TypeScript, React.js, React Native, Remix-run, and Hydrogen, among others. This diverse technical proficiency, coupled with my experience in SCSS/SASS, Python, Java, Git, Firebase, SQL, PHP, Node.js, Django, data visualization, analytics, and object-oriented programming, equips me with the ability to tackle complex challenges and deliver cutting-edge solutions.</p>
+            <p>I am also keen to explore freelance opportunities, offering my skills to a variety of projects to further broaden my practical experience. Whether you're considering contracting me for a specific project or bringing me onboard your team, my dedication and skill set make me a valuable addition. Let's connect and discuss how I can contribute to your project's success.</p>
           </article>
+          <section class ="header-right">
           <div class="freelance"><h2>Need a developer?</h2></div>
           <div class="contact-me">Contact me at:<br>
-            <h3>KlowdenSolutions<br>@gmail.com</h3>
+            <h3><a href="mailto:klowdensolutions@gmail.com">KlowdenSolutions<br>@gmail.com</a></h3>
+            <p>or</p>
+            <h3>Text (304)488-4917</h3>
           </div>
           <div class="note">(The background is interactive)</div>
+        </section>
         </div>
       </header>
       <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
@@ -39,22 +44,27 @@
         <!--Project 1-->
           <section class="projects">
             <div class = "project-item" id="project1">
-              <h3 class = "project-name">Project Name</h3>
+              <h3 class = "project-name">Cooledtured V3</h3>
+              <img class="project-img" src="images/cooledturedLogo.svg" alt="a chicken">
+              <p class = "project-description">Led a team of developers to redesign the Ecommerce site from scratch in the Hydrogen framework built on Remix/React</p>
+              <div class = "align-links">
+              <a class = "project-link" href="https://cooledtured.com/" target="_blank"
+              rel = "noopen noreferrer">View Project</a>
+              <a class = "project-link" href="https://github.com/Klowden/CooledturedV3" target="_blank"
+              rel = "noopen noreferrer">View Repo</a>
+            </div>
+            </div>
+            <div class = "project-item" id="">
+              <h3 class = "project-name">Current Portfolio - Remix</h3>
               <img class="project-img" src="images/4fd117737a9fd14.png" alt="a chicken">
               <p class = "project-description">Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
               <a class = "project-link" href="#" target="_blank">View project / case study</a>
             </div>
-            <div class = "project-item" id="project2">
-              <h3 class = "project-name">Project Name</h3>
-              <img class="project-img" src="images/4fd117737a9fd14.png" alt="a chicken">
-              <p class = "project-description">Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
-              <a class = "project-link" href="#" target="_blank">View project / case study</a>
-            </div>
-            <div class = "project-item" id="project3">
-              <h3 class = "project-name">Project Name</h3>
-              <img class="project-img" src="images/4fd117737a9fd14.png" alt="a chicken">
-              <p class = "project-description">Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
-              <a class = "project-link" href="#" target="_blank">View project / case study</a>
+            <div class = "project-item" id="">
+              <h3 class = "project-name">Initial Portfolio - React</h3>
+              <img class="project-img" src="images/examplePort-react.svg" alt="Image - Home">
+              <p class = "project-description">I made this initially to expand into the domain of Reactive applications.</p>
+              <a class = "project-link" href="#" target="_blank">View Project</a>
             </div>
           </section>
         <!-- End of Project Block. -->
@@ -85,6 +95,12 @@
               <li><span class="skill-text">React Native
                 <img class="skill-icon" src="images/React-01.png" alt="React Native Icon"></span>
               </li>
+              <li><span class="skill-text">Remix-run
+                <img class="skill-icon" src="images/logo-remix.svg" alt="OOP Icon">
+              </span></li>
+              <li><span class="skill-text">Hydrogen
+                <img class="skill-icon" src="images/Shopify-Hydrogen-Logo.webp" alt="Angular Icon"></span>
+              </li>
               <li><span class="skill-text">SCSS / SASS
                 <img class="skill-icon" src="images/Sass-01.png" alt="SASS Icon"></span>
               </li>
@@ -112,9 +128,6 @@
               <li><span class="skill-text">Django
                 <img class="skill-icon" src="images/django.png" alt="Django Icon"></span>
               </li>
-              <li><span class="skill-text">Angular
-                <img class="skill-icon" src="images/angular.png" alt="Angular Icon"></span>
-              </li>
               <li><span class="skill-text">Data Visualization
                 <img class="skill-icon" src="images/tableau.png" alt="Tableau Icon">
               </span></li>
@@ -139,11 +152,49 @@
         <!-- Copy this whole <section> block to add more jobs. -->
           <section class="jobs">
             <article class = "developer">
+              <h3 class="work-title">Lead Web<br>Developer</h3>
+              <h4 class="workplace"><a href = "https://cooledtured.com" target="_blank" rel="noopen noreferrer">Cooledtured</a></h4>
+              <div class="job-description">
+                <h4 id="job-descrip-h4">Job Description</h4>
+                <p>Designed and continues to manage the company's ecommerce front-end and back-end connections. Led teams of developers to overhaul the site from Shopify Liquid to a Remix based Hydrogen front-end environment hosted on Oxygen.
+                </p>
+              </div>
+              <div class = "job-duties">
+                <h3 id="duties-label-h3">Commitments</h3>
+                <dl class="duties-list">
+                  <dt>Leadership Dynamics</dt>
+                    <dd>• Proactively guiding the team, adeptly delegating tasks to harness individual strengths and propel project advancement.</dd>
+                  <dt>Quality Assurance</dt>
+                    <dd>• Delivering pristine and efficient solutions that meet and surpass expectations.</dd>
+                  <dt>Agile Adaptation</dt>
+                    <dd>• Showcasing flexibility in evolving project components in alignment with executive feedback and strategic direction.</dd>
+                  <dt>Engagement and Coordination</dt>
+                    <dd>• Maintaining regular and productive dialogue with leadership to refine strategies and address client feedback, while ensuring alignment and coherence within development and design teams.</dd>
+                  <dt>Visionary Planning</dt>
+                    <dd>• Embracing a comprehensive approach that integrates data analysis, customer insights, and cross-sectoral considerations into decision-making processes.</dd>
+                  <dt>Empowerment through Partnership</dt>
+                    <dd>• Fostering robust, trusting relationships within the team and with external collaborators, emphasizing transparent communication, motivational leadership, and a shared commitment to excellence.</dd>
+                </dl>
+              </div>
+              <div class = "accomplishments">
+                <h4 id="title-accomp">Component Examples</h4>
+                <ul class="accomplishments-list">
+                  <li>Responsive Navbar</li>
+                  <li>Client-side queries using GraphQL</li>
+                  <li>Interative Elements & Parallax effects</li>
+                  <li>Video Integrations (Twitch & Youtube)</li>
+                  <li>Discord Integration</li>
+                  <li>Custom Error Handling Functionality</li>
+                  <li>Blog Creation & Article Design</li>
+                </ul>
+              </div>
+            </article>
+            <article class = "developer">
               <h3 class="work-title">Web / Software<br>Developer</h3>
               <h4 class="workplace">Self-Employed</h4>
               <div class="job-description">
                 <h4 id="job-descrip-h4">Job Description</h4>
-                <p>Creates web pages for clients seeking customized experiences. Manages web pages for clients in order to provide updates and troubleshooting.
+                <p>Created web pages for clients seeking customized experiences. Manages web pages for clients in order to provide updates and troubleshooting.<br>Various side-projects...
                 </p>
               </div>
               <div class = "job-duties">
@@ -161,8 +212,6 @@
                     <dd>• Deliver results while putting the customer first and applying an omnimerchant mindset and the EDLP and EDLC business models to all plans.</dd>
                   <dt>Strategic Thinking</dt>
                     <dd>• Adopt a broad perspective that considers data, analytics, customer insights, and different parts of the business when making plans.</dd>
-                  <dt>Diversity, Equity & Inclusion</dt>
-                    <dd>• Embrace diversity in all its forms and actively support diversity of ideas and perspectives.</dd>
                   <dt>Collaboration & Influence</dt>
                     <dd>• Build strong and trusting relationships with team members and business partners; works collaboratively to achieve objectives; communicate with
                     impact to a range of audiences; and demonstrate energy and positivity for own work.</dd>
@@ -188,7 +237,7 @@
       
 
       <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
-      <div class="content-wrap">
+      <!-- <div class="content-wrap">
         <section class="education">
           <h2>Education</h2>
 
@@ -214,23 +263,33 @@
               <p id = 'cert'>BA in Political Science</p>
             </article>
           </section>
-        <!-- End of School Block. -->
         </section>
-      </div>
+      </div> -->
+      <!-- End of School Block. -->
     </main>
       <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
       <footer>
+        <div class="footer-content">
         <h2>Let's Connect!</h2>
 
         <!-- Social media and contact links. Add or remove any networks. -->
-        <ul>
-          <li><a href="mailto:klowdensolutions@gmail.com">KlowdenSolutions@gmail.com</a></li>
-          <li><a href="http://yourwebsite.com" target="_blank">yourwebsite.com</a></li>
-          <li><a href="https://twitter.com/Klowden4" target="_blank">Twitter</a></li>
-          <li><a href="https://www.linkedin.com/in/christopher-lowden-a40ba8140/" target="_blank">LinkedIn</a></li>
-          <li><a href="https://www.facebook.com/KristopherLowden" target="_blank">Facebook</a></li>
-        </ul>
+        <ul class="footer-grid">
+          <li><a href="mailto:klowdensolutions@gmail.com"
+            >KlowdenSolutions@gmail.com</a></li>
+          <li><a href="https://www.linkedin.com/in/christopher-lowden-a40ba8140/" target="_blank"
+            rel="noopener noreferrer">LinkedIn</a></li>
+          <li><a href="https://www.facebook.com/KristopherLowden" target="_blank"
+            rel="noopener noreferrer">Facebook</a></li>
+            <li><a href="https://github.com/Klowden" target="_blank"
+              rel="noopener noreferrer">GitHub.com</a></li>
+              <li>
+                <button id="phone-btn" class="phone-button">Phone: (304)488-4917</button>
+                <div id="info-popup" class="popup">Texts are highly preferred</div>
+              </li>
+            </ul>
+        </div>
       </footer>
     <script src = "scripts/miniCircleClumps.js"></script>
+    <script src = "scripts/index.js"></script>
   </body>
 </html>
