--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
         <!-- Copy the whole <section> block to add more projects. -->
         <!--Project 1-->
           <section class="projects">
-            <div class = "project-item" id="project1">
+            <div class = "project-item" id="">
               <h3 class = "project-name">Cooledtured V3</h3>
-              <img class="project-img" src="images/cooledturedLogo.svg" alt="a chicken">
+              <img class="project-img" src="images/cooledturedLogo.svg" alt="cooledtured Logo">
               <p class = "project-description">Led a team of developers to redesign the Ecommerce site from scratch in the Hydrogen framework built on Remix/React</p>
               <div class = "align-links">
               <a class = "project-link" href="https://cooledtured.com/" target="_blank"
@@ -56,15 +56,23 @@
             </div>
             <div class = "project-item" id="">
               <h3 class = "project-name">Current Portfolio - Remix</h3>
-              <img class="project-img" src="images/4fd117737a9fd14.png" alt="a chicken">
+              <img class="project-img" src="images/examplePort-remix.svg" alt="Example - Remix Homepage">
               <p class = "project-description">Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
-              <a class = "project-link" href="#" target="_blank">View project / case study</a>
+              <div class = "align-links">
+                <a class = "project-link" href="https://klowden.github.io/" target="_blank"
+                rel = "noopen noreferrer">View Project</a>
+                <a class = "project-link" href="https://github.com/Klowden/Klowden.github.io" target="_blank"
+                rel = "noopen noreferrer">View Repo</a>
+              </div>
             </div>
             <div class = "project-item" id="">
               <h3 class = "project-name">Initial Portfolio - React</h3>
               <img class="project-img" src="images/examplePort-react.svg" alt="Image - Home">
               <p class = "project-description">I made this initially to expand into the domain of Reactive applications.</p>
-              <a class = "project-link" href="#" target="_blank">View Project</a>
+              <div class = "align-links">
+                <a class = "project-link" href="#"></a>
+              <a class = "project-link" href="https://github.com/Klowden/PortfolioV1-React" target="_blank" rel="noopen noreferrer">View Repo</a>
+              </div>
             </div>
           </section>
         <!-- End of Project Block. -->
