--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class = "project-item" id="">
               <h3 class = "project-name">Current Portfolio - Remix</h3>
               <img class="project-img" src="images/examplePort-remix.svg" alt="Example - Remix Homepage">
-              <p class = "project-description">Summary or description of the project and/or your role in it. Add as many paragraphs as you need.</p>
+              <p class = "project-description">A Portfolio based in the Remix-Run JS Framework, and one you should definitely check out. It's much more fun to work in than vanilla React.</p>
               <div class = "align-links">
                 <a class = "project-link" href="https://klowden.github.io/" target="_blank"
                 rel = "noopen noreferrer">View Project</a>
